--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -1,8 +1,11 @@
 ---
 title: "Terms of Service"
 permalink: /terms/
+layout: default
 toc: true
+toc_sticky: true
 comments: false
+related: false
 ---
 
 ## Terms of Service
