--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -1,7 +1,7 @@
 ---
 title: "Terms of Service"
 permalink: /terms/
-layout: default
+layout: single_wide
 toc: true
 toc_sticky: true
 comments: false
