--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -1,11 +1,11 @@
 ---
 title: "Terms of Service"
 permalink: /terms/
-layout: single_wide
 toc: true
 toc_sticky: true
 comments: false
 related: false
+classes: wide-single
 ---
 
 ## Terms of Service
