--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -1,12 +1,16 @@
 ---
-title: "Terms of Service"
+title: "Our Policies"
 permalink: /terms/
 toc: true
 toc_sticky: true
 comments: false
 related: false
-classes: wide-single
+layout: single_wide
+excerpt_separator: <!--more-->
 ---
+
+Termos of Service and Privacy Policy of https://covid19.amsha.io
+<!--more-->
 
 ## Terms of Service
 
