--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -9,7 +9,7 @@ layout: single_wide
 excerpt_separator: <!--more-->
 ---
 
-Termos of Service and Privacy Policy of https://covid19.amsha.io
+Terms of Service and Privacy Policy of https://covid19.amsha.io
 <!--more-->
 
 ## Terms of Service
