--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -6,11 +6,8 @@ toc_sticky: true
 comments: false
 related: false
 layout: single_wide
-excerpt_separator: <!--more-->
+excerpt: Terms of Service and Privacy Policy of https://covid19.amsha.io
 ---
-
-Terms of Service and Privacy Policy of https://covid19.amsha.io
-<!--more-->
 
 ## Terms of Service
 
