--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -2,6 +2,8 @@
 title: "Our Policies"
 permalink: /terms/
 toc: true
+toc_label: "Contents"
+toc_icon: "balance-scale"
 toc_sticky: true
 comments: false
 related: false
