--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -8,14 +8,14 @@ toc_sticky: true
 comments: false
 related: false
 layout: single_wide
-excerpt: Terms of Service and Privacy Policy of https://covid19.amsha.io
+excerpt: Terms of Service and Privacy Policy of https://covid19.thedextazlab.com
 ---
 
 ## Terms of Service
 
 ### 1\. Terms
 
-By accessing the website at [https://covid19.amsha.io](https://covid19.amsha.io), you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.
+By accessing the website at [https://covid19.thedextazlab.com](https://covid19.thedextazlab.com), you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.
 
 ### 2\. Use License
 
@@ -54,7 +54,7 @@ These terms and conditions are governed by and construed in accordance with the 
 
 ## Privacy Policy
 
-Your privacy is important to us. It is covid19.amsha.io's policy to respect your privacy regarding any information we may collect from you across our website, [https://covid19.amsha.io](https://covid19.amsha.io), and other sites we own and operate.
+Your privacy is important to us. It is covid19.amsha.io's policy to respect your privacy regarding any information we may collect from you across our website, [https://covid19.thedextazlab.com](https://covid19.thedextazlab.com), and other sites we own and operate.
 
 We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.
 
