--- a/_posts/2020-03-22-terms.md
+++ b/_posts/2020-03-22-terms.md
@@ -19,34 +19,34 @@ By accessing the website at [https://covid19.thedextazlab.com](https://covid19.t
 
 ### 2\. Use License
 
-1.  Permission is granted to temporarily download one copy of the materials (information or software) on covid19.amsha.io's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+1.  Permission is granted to temporarily download one copy of the materials (information or software) on covid19.thedextazlab.com's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
     1.  modify or copy the materials;
     2.  use the materials for any commercial purpose, or for any public display (commercial or non-commercial);
-    3.  attempt to decompile or reverse engineer any software contained on covid19.amsha.io's website;
+    3.  attempt to decompile or reverse engineer any software contained on covid19.thedextazlab.com's website;
     4.  remove any copyright or other proprietary notations from the materials; or
     5.  transfer the materials to another person or "mirror" the materials on any other server.
-2.  This license shall automatically terminate if you violate any of these restrictions and may be terminated by covid19.amsha.io at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
+2.  This license shall automatically terminate if you violate any of these restrictions and may be terminated by covid19.thedextazlab.com at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
 
 ### 3\. Disclaimer
 
-1.  The materials on covid19.amsha.io's website are provided on an 'as is' basis. covid19.amsha.io makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
-2.  Further, covid19.amsha.io does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
+1.  The materials on covid19.thedextazlab.com's website are provided on an 'as is' basis. covid19.thedextazlab.com makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.
+2.  Further, covid19.thedextazlab.com does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.
 
 ### 4\. Limitations
 
-In no event shall covid19.amsha.io or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on covid19.amsha.io's website, even if covid19.amsha.io or a covid19.amsha.io authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
+In no event shall covid19.thedextazlab.com or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on covid19.thedextazlab.com's website, even if covid19.thedextazlab.com or a covid19.thedextazlab.com authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
 
 ### 5\. Accuracy of materials
 
-The materials appearing on covid19.amsha.io's website could include technical, typographical, or photographic errors. covid19.amsha.io does not warrant that any of the materials on its website are accurate, complete or current. covid19.amsha.io may make changes to the materials contained on its website at any time without notice. However covid19.amsha.io does not make any commitment to update the materials.
+The materials appearing on covid19.thedextazlab.com's website could include technical, typographical, or photographic errors. covid19.thedextazlab.com does not warrant that any of the materials on its website are accurate, complete or current. covid19.thedextazlab.com may make changes to the materials contained on its website at any time without notice. However covid19.thedextazlab.com does not make any commitment to update the materials.
 
 ### 6\. Links
 
-covid19.amsha.io has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by covid19.amsha.io of the site. Use of any such linked website is at the user's own risk.
+covid19.thedextazlab.com has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by covid19.thedextazlab.com of the site. Use of any such linked website is at the user's own risk.
 
 ### 7\. Modifications
 
-covid19.amsha.io may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
+covid19.thedextazlab.com may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.
 
 ### 8\. Governing Law
 
@@ -54,7 +54,7 @@ These terms and conditions are governed by and construed in accordance with the 
 
 ## Privacy Policy
 
-Your privacy is important to us. It is covid19.amsha.io's policy to respect your privacy regarding any information we may collect from you across our website, [https://covid19.thedextazlab.com](https://covid19.thedextazlab.com), and other sites we own and operate.
+Your privacy is important to us. It is covid19.thedextazlab.com's policy to respect your privacy regarding any information we may collect from you across our website, [https://covid19.thedextazlab.com](https://covid19.thedextazlab.com), and other sites we own and operate.
 
 We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.
 
